--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@vercel/speed-insights": "^1.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "html-react-parser": "^5.1.1",
     "lucide-react": "^0.292.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.4",
     "next": "14.0.0",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
@@ -35,6 +37,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.11.3",
+    "@types/prismjs": "^1.26.3",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
