--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vercel/speed-insights": "^1.0.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "geist": "^1.3.0",
     "html-react-parser": "^5.1.10",
     "lucide-react": "^0.394.0",
     "mongodb": "^6.7.0",
