--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vercel/speed-insights": "^1.0.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.2.12",
     "geist": "^1.3.0",
     "html-react-parser": "^5.1.10",
     "lucide-react": "^0.394.0",
