--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.31.4",
+    "@google/generative-ai": "^0.17.0",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
@@ -27,14 +28,14 @@
     "html-react-parser": "^5.1.12",
     "lucide-react": "^0.394.0",
     "mongodb": "^6.8.0",
-    "mongoose": "^8.5.2",
+    "mongoose": "^8.5.3",
     "next": "14.2.4",
     "prismjs": "^1.29.0",
     "query-string": "^9.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
-    "svix": "^1.29.0",
+    "svix": "^1.30.0",
     "tailwind-merge": "^2.5.2",
     "zod": "^3.23.8"
   },
@@ -52,7 +53,7 @@
     "eslint-plugin-tailwindcss": "^3.17.4",
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.9",
+    "tailwindcss": "^3.4.10",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.5.4"
   }
